# play_rust

./: .gitignore  Cargo.toml
phrases/: Cargo.toml
phrases/src/: main.rs
phrases/src/english/: greetings.rs
phrases/src/japanese/: farewells.rs  greetings.rs
src/: borrow.rs  calculator.rs  calculator_with_language_env.rs  combine.rs  func.rs  regex.rs  trait.rs
