[package]
name = "playground"
version = "0.1.0"
authors = ["yubachiri <k.i.moso9532@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "func"
path = "src/func.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"
