[package]
name = "playground"
version = "0.1.0"
authors = ["yubachiri <k.i.moso9532@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
combine = "2.0.0"
combine-language = "2.0.0"

[[bin]]
name = "func"
path = "src/func.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "trait"
path = "src/trait.rs"

[[bin]]
name = "regex"
path = "src/regex.rs"

[[bin]]
name = "combine"
path = "src/combine.rs"

[[bin]]
name = "calculator"
path = "src/calculator.rs"

[[bin]]
name = "calculator_with_language_env"
path = "src/calculator_with_language_env.rs"
